--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ matplotlib==3.8.2
 numpy==1.26.3
 pandas==2.1.4
 python-okx==0.2.6
+pydrive
 requests==2.28.2
 requests-oauthlib==1.3.1
 scikit-learn==1.3.2
